# ai_generated_code

./: CMakeLists.txt  HandDetection_Main.cpp  HandDetector.cpp  HandDetector_CMakeLists.txt  HandDetector_build.sh  HandLandMark.hpp  LongTermMemory.cpp  LongTermMemory.hpp  MemoryManager.cpp  MemoryManager.hpp  MyMCPGPT.py  MyMCPService.py  ShortTermMemory.cpp  UserAgent.cpp  VectorDB.cpp  VectorDB.hpp  agent_main.cpp  dinov2_Inference.cpp  email.cpp  email.py  hailo_yolo11_seg.cpp  hailo_yolo11_seg.hpp  hailo_yolo_CMakeLists.txt  hailo_yolo_main.cpp  hand_detection_graph.pbtxt  imageRequest.cpp  imageRequest2.cpp  initial_prompting.txt  llm_client.hpp  main.cpp  mcp_prompts_bridge.cpp  mcp_resources_bridge.cpp  mcp_server_example.py  mcp_tools_bridge.cpp  mcp_tools_gemini_tools.cpp  mcp_tools_to_gemini.cpp  modality.cpp  modality.hpp  multi_vendor_agent_impl_example.cpp  query.hpp  (+2 more)
Generate_vs_streamGenerate/: generateContent.cpp  streamGenerateContent.cpp
codes/: llm_client.cpp  query.cpp  response.hpp
ipc_via_named_pipe/: CMakeLists.txt  reader_named_pipe.cpp  writer_named_pipe.cpp
rest_examples/: request_example.json  vertexai_gemini_flash.sh  vertexai_gemini_flash_generate_video_understand.sh  vertexai_gemini_flash_streamGenerate_image_understand.sh  vertexai_gemini_flash_with_json.sh
simple_agent_using_llm/: CMakeLists.txt
simple_agent_using_llm/include/: LLMAgent.hpp  Message.hpp  ShortTermMemory.hpp  UserAgent.hpp
simple_agent_using_llm/src/: LLMAgent.cpp  Message.cpp  ShortTermMemory.cpp  UserAgent.cpp
system_instruction/: system_instruction.cpp
tips_text/: multi_turn_prompting.txt
vectorDB/: batch_vectorDB.cpp  build.sh  distributed_vectorDB.cpp  embedding_cache_process_stream.cpp  last_vector_main.cpp  mmaped_vectorDB.cpp  opensource_vectorDB.txt  optimized_vectorDB.cpp  optimized_vector_main.cpp  prepare_build.sh  threadpool.cpp  vectorDB.cpp  vector_main.cpp
